  * debian/patches/hurd-i386/cvs-warnings.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-check-local-headers.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-mlock.diff: Upstreamed.
  * debian/patches/hurd-i386/cvs-csu_crt0.diff: New patch, fixes gcrt0.o
    build.
  * debian/patches/hurd-i386/cvs-s_scalbn.diff: New patch, fixes s_scalbn.S
    build.

 -- Adam Conrad <adconrad@0c3.net>  Tue, 15 Sep 2015 17:57:41 -0600

glibc (2.21-0experimental2) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * Symbol versions which contain _DEBIAN_ are unexpected by upstream scripts.
    Add hurd-i386-only patches/hurd-i386/local-versions-hack.diff to work
    around the issue.  Also take the opportunity of the upstream version bump
    to bump the versions to GLIBC_2_21, which will allow one to remove the
    _DEBIAN_ hacks once packages are rebuilt.
  * patches/hurd-i386/unsubmitted-libpthread-semaphore.h.diff: Remove
    libpthread/sysdeps/i386/bits/semaphore.h, now that hurd Implies
    libpthread/sysdeps/generic. Move libpthread/include/semaphore.h into
    libpthread/sysdeps/pthread/semaphore.h instead of the latter just
    including the former, since the latter is what gets installed.

  [ Aurelien Jarno ]
  * rules.d/debhelper.mk: replace GLIBC_VERSION before LIBC.  Closes:
    #797538.
  * Drop loongson-2f flavour on mipsel as this machine is not supported
    anymore (default to R2 ISA).
  * kfreebsd/local-sysdeps.diff: update to revision 5772 (from glibc-bsd).
    Closes: #764692, #785796.
  * testsuite-checking/expected-results-mips*: allow the new tst-audit9
    fail, like the others tst-auditX.
  * testsuite-checking/expected-results-mips(el)-linux-gnu-libc: allow
    conformtest for sys/stat.h to fail for O32 ABI. They were previously
    under the failing test run-conformtest.out, but it has been lost in
    the conversion to the new format.
  * testsuite-checking/expected-results-mips*: sort the files. Remove