@@ -59,6 +59,7 @@ glibc (2.22-0experimental0) UNRELEASED; urgency=medium
     build.
   * debian/patches/hurd-i386/cvs-s_scalbn.diff: New patch, fixes s_scalbn.S
     build.
+  * debian/patches/hurd-i386/tg-tls-threadvar.diff: Update.
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 15 Sep 2015 17:57:41 -0600
 
